--- a/src/CSS/projects.css
+++ b/src/CSS/projects.css
@@ -16,24 +16,12 @@
   .project-container {
     margin: 20px 0px;
   }
-  .project-title {
-  }
-  .project-image {
-  }
-  .project-description {
-  }
 }
 
 @media (min-width: 576px) {
   .projects-page-title {
     font-size: 40px;
     margin: 25px 0px;
-  }
-  .project-title {
-  }
-  .project-image {
-  }
-  .project-description {
   }
 }
 
@@ -42,12 +30,6 @@
     font-size: 40px;
     margin: 25px 0px;
   }
-  .project-title {
-  }
-  .project-image {
-  }
-  .project-description {
-  }
 }
 
 @media (min-width: 992px) {
@@ -55,24 +37,12 @@
     font-size: 40px;
     margin: 25px 0px;
   }
-  .project-title {
-  }
-  .project-image {
-  }
-  .project-description {
-  }
 }
 
 @media (min-width: 1200px) {
   .projects-page-title {
     font-size: 40px;
     margin: 30px 0px;
-  }
-  .project-title {
-  }
-  .project-image {
-  }
-  .project-description {
   }
 }
 
@@ -161,13 +131,19 @@
 }
 
 .cert-title {
-  font-weight: 500;
-  font-size: 17px;
+  font-weight: 200;
   margin-bottom: 10px;
+  color: rgb(172, 172, 172);
+}
+
+.year {
+  font-weight: 100;
 }
 
 .cert-desc {
-  color: rgb(172, 172, 172);
+  color: rgb(255, 255, 255);
+  font-weight: 500;
+  font-size: 17px;
 }
 
 .cert-material {
@@ -178,7 +154,8 @@
 .home-link {
   position: fixed;
   bottom: 0px;
-  width: 100%;
+  left: -0.5vw;
+  width: 101vw;
   background-color: black;
   padding-top: 15px;
 }
